Closed Bug 1772561 Opened 3 years ago Closed 3 years ago

Do not call RDLUtils::AssertDisplayItemUnmodified() in opt builds

Categories

(Core :: Web Painting, defect, P3)

defect

Tracking

()

RESOLVED FIXED
103 Branch
Tracking Status
firefox103 --- fixed

People

(Reporter: mikokm, Assigned: mikokm)

References

Details

Attachments

(1 file)

I noticed that this was shown in some profiles for bug 1771977. This should only be called in debug builds.

Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/b30d8e1d3975 Do not call RDLUtils::AssertDisplayItemUnmodified() in opt builds r=tnikkel
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 103 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: