Bug 1772561 - Do not call RDLUtils::AssertDisplayItemUnmodified() in opt builds r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D148272